force-app/main/default/objects/GDS_Reference__c/GDS_Reference__c.object-meta.xml
<CustomObject>
    <label>GDS Reference</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GDS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDS References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>