force-app/main/default/objects/GDS_Reference__c/fields/Channel_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Effective Date</label>
    <type>Date</type>
</CustomField>