force-app/main/default/objects/GDS_Reference__c/fields/Channel_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Channel_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Enabled</label>
    <type>Checkbox</type>
</CustomField>