force-app/main/default/objects/GDS_Reference__c/fields/Customer_ID_Required__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Required__c</fullName>
    <description>Used in the front end for &quot;Customer Id&quot; field validation</description>
    <inlineHelpText>Used in the front end for &quot;Customer Id&quot; field validation</inlineHelpText>
    <label>Customer ID Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>