force-app/main/default/objects/GDS_Reference__c/fields/FareLogix_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FareLogix_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FareLogix Indicator</label>
    <type>Checkbox</type>
</CustomField>