force-app/main/default/objects/GDS_Reference__c/fields/GDS_One_Char_Code__c.field-meta.xml
<CustomField>
    <fullName>GDS_One_Char_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS One Char Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>