force-app/main/default/objects/GDS_Reference__c/fields/Maximum_RecG_Counter__c.field-meta.xml
<CustomField>
    <fullName>Maximum_RecG_Counter__c</fullName>
    <label>Maximum RecG Counter</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>