force-app/main/default/objects/GDS_Reference__c/fields/Maximum_RecG_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Maximum_RecG_Sequence__c</fullName>
    <label>Maximum RecG Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>