force-app/main/default/objects/GDS_Reference__c/fields/PCC_Max_Length__c.field-meta.xml
<CustomField>
    <fullName>PCC_Max_Length__c</fullName>
    <label>PCC Max Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>