force-app/main/default/objects/GDS_Reference__c/fields/PCC_OID__c.field-meta.xml
<CustomField>
    <fullName>PCC_OID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCC/OID</label>
    <type>Checkbox</type>
</CustomField>