force-app/main/default/objects/GDS_Reference__c/fields/QAC_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>QAC_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QAC Effective Date</label>
    <type>Date</type>
</CustomField>