force-app/main/default/objects/GDS_Reference__c/fields/QAC_Enabled__c.field-meta.xml
<CustomField>
    <fullName>QAC_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QAC Enabled</label>
    <type>Checkbox</type>
</CustomField>