force-app/main/default/objects/GDS_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IATA_GDS_Code__c</columns>
    <columns>QAC_Enabled__c</columns>
    <columns>QAC_Effective_Date__c</columns>
    <columns>Channel_Enabled__c</columns>
    <columns>Channel_Effective_Date__c</columns>
    <columns>Maximum_RecG_Counter__c</columns>
    <columns>Group__c</columns>
    <columns>Active__c</columns>
    <columns>FareLogix_Indicator__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>